gcc/testsuite/rust/rustc/ui/issues/issue-11844_dg.rs
fn main() {
    let a = Some(Box::new(1));
    match a {
        Ok(a) => // { dg-error ".E0308." "" { target *-*-* } }
            println!("{}",a),
        None => panic!()
    }
}

